<resources>
    <string name="app_name">野球スタメンアプリ</string>
    <string name="app_title1">野球スタメン</string>
    <string name="app_title2">作成アプリ</string>
    <string name="non_dh_version">DHなし</string>
    <string name="dh_version">DHあり</string>
    <string name="special_version">特別ルール</string>
    <string name="special_version_disable">特別ルール(有料)</string>
    <string name="what_is_special"><u>特別ルールとは？</u></string>
    <string name="line_break">\n</string>
    <string name="price">価格(税込)</string>
    <string name="about_special_1">いわゆる”全員打ち”です。</string>
    <string name="about_special_2">こちらは「買い切り」ですので、お支払いは一度のみです。\n月額ではありませんのでご安心ください。</string>
    <string name="reloaded_purchase">購入を復元しました。</string>
    <string name="no_purchase_record">購入履歴はありません</string>
    <string name="no_purchase">購入履歴を取得できませんでした。</string>
    <string name="purchase">￥購入</string>
    <string name="restore">購入復元</string>
    <string name="ask_purchase">購入手続きに移りますか？</string>
    <string name="require_connection">インターネット接続が確認できません。</string>
    <string name="confirm_connection">ご購入の際は、インターネット接続があることをご確認ください。</string>
    <string name="failed_play_store_connection">Google play storeとの接続に失敗しました。</string>
    <string name="play_store_disconnected">Google play storeとの接続が切断されました。購入手続きの際はアプリを開き直しください。</string>
    <string name="in_progress">処理中</string>
    <string name="order_introduction">＜使い方＞\n\n左側の打順番号ボタンを押すと、\n入力を開始します。</string>
    <string name="first">１番</string>
    <string name="second">２番</string>
    <string name="third">３番</string>
    <string name="fourth">４番</string>
    <string name="fifth">５番</string>
    <string name="sixth">６番</string>
    <string name="seventh">７番</string>
    <string name="eighth">８番</string>
    <string name="ninth">９番</string>
    <string name="pitcher_initial">P</string>
    <string name="role">起用</string>
    <string name="role_pitcher">投手</string>
    <string name="role_batter">代打</string>
    <string name="role_runner">代走</string>
    <string name="role_fielder">守備</string>
    <string name="pitcher_text">(投)</string>
    <string name="sub_label">控</string>
    <string name="sub">控え</string>
    <string name="hyphen_5">-----</string>
    <string name="hyphen_4">----</string>
    <string name="save">登録</string>
    <string name="clear">クリア</string>
    <string name="title"><u>Starting Member</u></string>
    <string name="sub_title">ベンチ入り選手</string>
    <string name="display_starting">先発表示</string>
    <string name="display_sub">控え表示</string>
    <string name="add_sub">控え追加</string>
    <string name="delete_sub">控え削除</string>
    <string name="add_starting">先発追加</string>
    <string name="delete_starting">先発削除</string>
    <string-array name="positions_normal">
        <item>----</item>
        <item>(投)</item>
        <item>(捕)</item>
        <item>(一)</item>
        <item>(二)</item>
        <item>(三)</item>
        <item>(遊)</item>
        <item>(左)</item>
        <item>(中)</item>
        <item>(右)</item>
    </string-array>
    <string-array name="positions_dh">
        <item>----</item>
        <item>(捕)</item>
        <item>(一)</item>
        <item>(二)</item>
        <item>(三)</item>
        <item>(遊)</item>
        <item>(左)</item>
        <item>(中)</item>
        <item>(右)</item>
        <item>(DH)</item>
    </string-array>
    <string-array name="positions_all">
        <item>----</item>
        <item>(投)</item>
        <item>(捕)</item>
        <item>(一)</item>
        <item>(二)</item>
        <item>(三)</item>
        <item>(遊)</item>
        <item>(左)</item>
        <item>(中)</item>
        <item>(右)</item>
        <item>(DH)</item>
    </string-array>

    <string name="review_app">アプリを評価する</string>
    <string name="baseball_blog">打線組んだブログ</string>
    <string name="baseball_blog_url">https://enjoy-baseball-app.com/</string>
    <string name="contact_us">問題報告・クレーム</string>
    <string name="contact_us_url">https://enjoy-baseball-app.com/contact-us/</string>
    <string name="recommend_app">おすすめアプリ紹介</string>
    <string name="recommendation_title">おすすめアプリ紹介</string>
    <string name="recommendation_message1">＜内容紹介＞</string>
    <string name="recommendation_message2">このアプリでは、外見や性格を入力することで、その人の野球能力を某野球ゲーム風に診断できます。\n野球好きなら必ず楽しめるアプリです。\nぜひ友人やチームメイトみんなで楽しんでください。</string>
    <string name="recommend_app_page"><a href="https://play.google.com/store/apps/details?id=com.websarva.wings.android.abiityofbaseball">野球診断 for パワプロ</a></string>
    <string name="privacy_policy">プライバシーポリシー</string>
    <string name="policy_title">個人情報保護について</string>
    <string name="policy_message1">＜広告について＞</string>
    <string name="policy_message2">本アプリでは、広告配信ツールとしてAdMob(Google Inc.)を使用しており、AdMobがご利用者の情報を自動取得する場合がございます。取得する情報、利用目的、第三者への提供等につきましては、以下の広告配信事業者のアプリケーション・プライバシーポリシーのリンクよりご確認ください。</string>
    <string name="google_policy"><a href="https://policies.google.com/technologies/ads?hl=ja">Google広告に関するポリシー</a></string>
    <string name="agree">同意する</string>
    <string name="close">閉じる</string>
    <string name="ask_finish_app">アプリを終了しますか？</string>
    <string name="yes">はい</string>
    <string name="order">ノーマル</string>
    <string name="subOrder">DH</string>
    <string name="field">守備画面</string>
    <string name="back">戻る</string>
    <string name="understand">わかりました</string>
    <string name="cancel">キャンセル</string>
    <string name="exchange">入れ替え</string>
    <string name="require_exchange_title">入れ替える選手を選んでください</string>
    <string name="require_delete_title">削除する選手を選んでください</string>
    <string name="announce_limit_sub">控え登録が上限です。</string>
    <string name="announce_max_limit_special">先発登録が上限です。</string>
    <string name="announce_min_limit_special">9人が下限人数です。</string>
    <string name="share">LINE/Twitter</string>
    <string name="all_clear">白紙に戻す</string>
    <string name="all_clear_title">オールクリア</string>
    <string name="all_clear_message">スタメンを白紙に戻してよろしいですか？</string>
    <string name="no_order">[-]</string>
    <string name="share_disabled">現在利用不可です。スクリーンショットで画像化お願いします。</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
