<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/contact_us"
        android:title="@string/contact_us"
        app:showAsAction="never" />
    <item
        android:id="@+id/review_app"
        android:title="@string/review_app"
        app:showAsAction="never" />
    <item
        android:id="@+id/recommend"
        android:title="@string/recommend_app"
        app:showAsAction="never" />
    <item
        android:id="@+id/baseball_blog"
        android:title="@string/baseball_blog"
        app:showAsAction="never" />
    <item
        android:id="@+id/policy"
        android:title="@string/privacy_policy"
        app:showAsAction="never" />
</menu>