<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3CB371"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/emerald_green_background"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp">

                    <TextView
                        android:id="@+id/selectNum"
                        android:layout_width="60sp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="3dp"
                        android:text="@string/hyphen_4"
                        android:textColor="#003300"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/position"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/positions_normal" />

                    <TextView
                        android:id="@+id/sub"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/sub"
                        android:textColor="#000000"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:visibility="gone" />

                    <EditText
                        android:id="@+id/etName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:inputType="text"
                        android:maxLength="15"
                        android:maxLines="1"
                        android:textColor="#000000"
                        android:textSize="24sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/role_box_for_sub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/emerald_green_background"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingLeft="5dp"
                    android:paddingTop="3dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="3dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/role"
                        android:textColor="#000000"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/role_pitcher_button"
                        android:layout_width="0dp"
                        android:layout_height="36sp"
                        android:layout_marginRight="3dp"
                        android:layout_weight="1.0"
                        android:background="@drawable/role_off_background"
                        android:onClick="onClickRoleButton"
                        android:text="@string/role_pitcher"
                        android:textColor="#696969"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/role_batter_button"
                        android:layout_width="0dp"
                        android:layout_height="36sp"
                        android:layout_marginRight="3dp"
                        android:layout_weight="1.0"
                        android:background="@drawable/role_off_background"
                        android:onClick="onClickRoleButton"
                        android:text="@string/role_batter"
                        android:textColor="#696969"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/role_runner_button"
                        android:layout_width="0dp"
                        android:layout_height="36sp"
                        android:layout_marginRight="3dp"
                        android:layout_weight="1.0"
                        android:background="@drawable/role_off_background"
                        android:onClick="onClickRoleButton"
                        android:text="@string/role_runner"
                        android:textColor="#696969"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/role_fielder_button"
                        android:layout_width="0dp"
                        android:layout_height="36sp"
                        android:layout_marginRight="3dp"
                        android:layout_weight="1.0"
                        android:background="@drawable/role_off_background"
                        android:onClick="onClickRoleButton"
                        android:text="@string/role_fielder"
                        android:textColor="#696969"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/cancel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1.0"
                        android:background="@drawable/disable_button_background"
                        android:enabled="false"
                        android:onClick="onClickCancel"
                        android:text="@string/cancel"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/clear"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1.0"
                        android:background="@drawable/disable_button_background"
                        android:enabled="false"
                        android:onClick="onClickClear"
                        android:text="@string/clear"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/exchange"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:background="@drawable/exchange_button_background"
                        android:onClick="onClickExchange"
                        android:text="@string/exchange"
                        android:textSize="16sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="15dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/record"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/disable_button_background"
                        android:enabled="false"
                        android:onClick="onClickSave"
                        android:text="@string/save"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </LinearLayout>


            </LinearLayout>


            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/title"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold">

                <requestFocus />

            </TextView>

            <FrameLayout
                android:id="@+id/lineup_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp">

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/order_switch_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1.0"
                    android:background="@drawable/switch_button_background"
                    android:textColor="#fff"
                    android:onClick="onClickSwitchOrder"
                    android:text="@string/display_sub"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/add_sub_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1.0"
                    android:background="@drawable/add_member_button_background"
                    android:textColor="#fff"
                    android:onClick="onClickAddSub"
                    android:text="@string/add_sub"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/delete_sub_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1.0"
                    android:background="@drawable/delete_member_button_background"
                    android:textColor="#fff"
                    android:onClick="onClickDeleteSub"
                    android:text="@string/delete_sub"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/add_special_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1.0"
                    android:background="@drawable/add_member_button_background"
                    android:textColor="#fff"
                    android:onClick="onClickAddStarting"
                    android:text="@string/add_starting"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/delete_special_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1.0"
                    android:background="@drawable/delete_member_button_background"
                    android:textColor="#fff"
                    android:onClick="onClickDeleteStarting"
                    android:text="@string/delete_starting"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:visibility="gone" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="200dp">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1.0"
                    android:background="@drawable/back_button_background"
                    android:onClick="onClickBackToTop"
                    android:text="@string/back"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1.0"
                    android:background="@drawable/field_button_background"
                    android:onClick="onClickField"
                    android:text="@string/field"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1.0"
                    android:background="@drawable/emerald_green_background"
                    android:onClick="onClickAllClear"
                    android:text="@string/all_clear"
                    android:maxLines="1"
                    android:textAllCaps="false"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/ad_view_container_on_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
